--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "dependencies": {},
   "devDependencies": {
+    "css-loader": "^0.28.11",
     "jquery": "^2.2.4",
+    "style-loader": "^0.20.3",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.12"
   }
