--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.1",
   "dependencies": {},
   "devDependencies": {
+    "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.1.0",
     "jquery": "^2.2.4",
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
